# training-cpp-build-tools

./: .gitignore  scripts.md
cmake/chapter01/: README.md
cmake/chapter01/1_HelloWorld/: Makefile
cmake/chapter01/2_BasicStructure/: Makefile  Makefile.v1
cmake/chapter01/3_CompilerFlags/: Makefile
cmake/chapter01/4_WildcardFiles1/: Makefile  main.cc
cmake/chapter01/5_MakefileTemplate/: Makefile
cmake/chapter02/: CMakeGuide.md  README.md
cmake/chapter02/01_HelloWorld/: CMakeLists.txt
cmake/chapter02/02_BasicProjectStructure/: CMakeLists.txt  my_lib.cc
cmake/chapter02/03_IntermediateProjectStructure/: CMakeLists.txt
cmake/chapter02/04_VariablesAndOptions/: CMakeLists.txt
cmake/chapter02/04_VariablesAndOptions/app/: CMakeLists.txt
cmake/chapter02/04_VariablesAndOptions/src/my_lib/src/: CMakeLists.txt
cmake/chapter02/05_ConfigureFile/app/: main.cc
cmake/chapter02/05_ConfigureFile/src/my_lib/: CMakeLists.txt
cmake/chapter02/06_BetterProject/: CMakeLists.txt
cmake/chapter02/06_BetterProject/src/my_lib/: CMakeLists.txt
cmake/chapter02/07_SubModules/: CMakeLists.txt  README.md
cmake/chapter02/07_SubModules/app/: CMakeLists.txt  main.cc
cmake/chapter02/07_SubModules/cmake/: AddGitSubModule.cmake
cmake/chapter02/08_FetchContent/: CMakeLists.txt  Makefile
cmake/chapter02/08_FetchContent/app/: CMakeLists.txt  main.cc
cmake/chapter02/08_FetchContent/src/my_lib/: CMakeLists.txt
cmake/chapter02/09_Doxygen/: CMakeLists.txt
cmake/chapter02/09_Doxygen/docs/: Docs.cmake  Doxyfile
cmake/chapter02/09_Doxygen/src/my_lib/: my_lib.h
cmake/chapter02/10_UnitTests/: CMakeLists.txt  Makefile
cmake/chapter02/10_UnitTests/app/: main.cc
cmake/chapter02/10_UnitTests/cmake/: Documentation.cmake
cmake/chapter02/10_UnitTests/src/my_lib/: CMakeLists.txt
cmake/chapter02/11_CompilerWarnings/: CMakeLists.txt
cmake/chapter02/11_CompilerWarnings/cmake/: CompilerWarnings.cmake
cmake/chapter02/11_CompilerWarnings/src/my_lib/: CMakeLists.txt
cmake/chapter02/11_CompilerWarnings/tests/: main.cc
cmake/chapter02/12_Sanitizers/: CMakeLists.txt
cmake/chapter02/12_Sanitizers/app/: CMakeLists.txt
cmake/chapter02/12_Sanitizers/cmake/: LTO.cmake  Sanitizer.cmake
cmake/chapter02/12_Sanitizers/configured/: config.hpp.in
cmake/chapter02/12_Sanitizers/src/my_lib/: my_lib.cc
cmake/chapter02/13_CompilerGenerators/: CMakeLists.txt
cmake/chapter02/13_CompilerGenerators/app/: main.cc
cmake/chapter02/13_CompilerGenerators/cmake/: TermColor.cmake
cmake/chapter02/13_CompilerGenerators/docs/: Doxyfile.in
cmake/chapter02/13_CompilerGenerators/tests/: CMakeLists.txt
cmake/chapter02/14_Conan/: CMakeLists.txt  Makefile  conanfile.py
cmake/chapter02/14_Conan/app/: CMakeLists.txt
cmake/chapter02/14_Conan/cmake/: Dependencies.cmake  Documentation.cmake
cmake/chapter02/15_Precommit/: .clang-format  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  Makefile  conanfile.py
cmake/chapter02/15_Precommit/app/: CMakeLists.txt  main.cc  test.json
cmake/chapter02/15_Precommit/cmake/: CompilerWarnings.cmake  Dependencies.cmake  Documentation.cmake  LTO.cmake  Sanitizer.cmake  TermColor.cmake
cmake/chapter02/15_Precommit/configured/: CMakeLists.txt  config.hpp.in
cmake/chapter02/15_Precommit/docs/: Doxyfile.in
cmake/chapter02/15_Precommit/src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
cmake/chapter02/15_Precommit/tests/: main.cc
cmake/chapter02/16_HeaderOnlyLib/: CMakeLists.txt
cmake/chapter02/16_HeaderOnlyLib/src/: CMakeLists.txt
cmake/chapter02/16_HeaderOnlyLib/src/app/: CMakeLists.txt  main.cpp
cmake/chapter02/16_HeaderOnlyLib/src/headerlib/: CMakeLists.txt  lib.hpp
cmake/chapter02/17_LibraryTypes/: CMakeLists.txt
cmake/chapter02/17_LibraryTypes/src/: CMakeLists.txt
cmake/chapter02/17_LibraryTypes/src/app/: CMakeLists.txt
cmake/chapter02/18_FindPackage/: CMakeLists.txt  Makefile
cmake/chapter02/18_FindPackage/cmake/: FindLibExample.cmake
cmake/chapter02/19_CustomTarget/: CMakeLists.txt
cmake/chapter02/19_CustomTarget/cmake/: CustomPythonTarget.cmake
cmake/chapter02/19_CustomTarget/scripts/: CustomPythonTarget.py
cmake/chapter02/19_CustomTarget/src/headerlib/: CMakeLists.txt
cmake/chapter02/20_CustomCommand/cmake/: CustomPythonTarget.cmake
cmake/chapter02/20_CustomCommand/scripts/: CustomPythonTarget.py
cmake/chapter02/20_CustomCommand/src/app/: CMakeLists.txt  main.cpp
cmake/chapter02/20_CustomCommand/src/headerlib/: lib.cpp
cmake/chapter02/21_ExecuteProcess/cmake/: AddGitSubModule.cmake
conan2/: README.md
