include(Catch)

set(TEST_MAIN "unit_tests")
set(TESTS_SOURCES "main.cc")
set(TESTS_INCLUDES "./")

add_executable(${TEST_MAIN}  ${TESTS_SOURCES})
target_include_directories(${TEST_MAIN} PUBLIC ${TESTS_INCLUDES})

# Catch2::Catch2WithMain if you want Catch2 to provide the main function
# Catch2::Catch2 if you want to define your own main function
target_link_libraries(${TEST_MAIN} PUBLIC ${LIBRARY_NAME} Catch2::Catch2WithMain)

catch_discover_tests(${TEST_MAIN})
